# rule-engine-postgres

./: .dockerignore  .env.example  .gitignore  BACKWARD_CHAINING_GUIDE.md  BACKWARD_CHAINING_SUMMARY.md  BUILD.md  BUILD_AND_INSTALL.md  CHANGELOG.md  CHANGELOG_v1.7.0.md  CI_FIX_SUMMARY.md  COMPILATION_FIX_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DATASOURCE_QUICK_REFERENCE.md  DESIGN_PREPROCESSING.md  DESIGN_TIME_TRAVEL.md  DOCUMENTATION_IMPROVEMENTS.md  Dockerfile  FUZZING_DEMO.md  FUZZING_GUIDE.md  FUZZING_IMPLEMENTATION.md  FUZZING_SUCCESS.md  FUZZING_SUMMARY.md  LICENSE  META.json  Makefile  NATIVE_BACKWARD_CHAINING.md  NATIVE_BC_IMPLEMENTATION_SUMMARY.md  README.md  REFACTORING_PLAN.md  REFACTORING_STATUS.md  RELEASE_CHECKLIST_v2.0.0.md  STATUS_UPDATE.md  V1.7.0_BUILTIN_FUNCTIONS_SUMMARY.md  WORK_SUMMARY.md  build-deb.sh  bump-version.sh  check-before-commit.sh  docker-compose.yml  install.sh  (+32 more)
.github/workflows/: ci.yml  release.yml
debian/: control
docs/: DOCUMENTATION_GUIDE.md  ENGINE_SELECTION.md  EXTERNAL_DATASOURCES.md  Event-Trigger-Functions.md  INSTALLATION.md  MIGRATION_GUIDE.md  NATS_INTEGRATION.md  PGCRYPTO_REQUIREMENT.md  PHASE2_DEVELOPER_EXPERIENCE.md  PRODUCTION.md  QUICKSTART.md  README.md  ROADMAP.md  TROUBLESHOOTING.md  UPGRADE.md  UPGRADE_INSTRUCTIONS.md  USE_CASE_WEBHOOKS_DATASOURCES.md  V2_RELEASE_SUMMARY.md  WEBHOOKS.md  api-reference.md  integration-patterns.md
docs/deployment/: distribution.md  docker.md
docs/development/: BUILD_AND_INSTALL.md  BUILD_SYSTEM.md  FINAL_SUMMARY.md  MAINTAINER_GUIDE.md  RELEASE_PROCESS.md  TEST_SUMMARY.md  TROUBLESHOOTING.md
docs/examples/: use-cases.md
docs/guides/: rule-repository-quick-reference.md
docs/rfcs/: 0000-template.md  0001-rule-repository.md  0002-event-triggers.md  0002-rule-statistics.md  0003-rule-testing-framework.md  0004-event-triggers.md  0005-webhook-support.md  0006-rest-api-wrapper.md  0007-implementation-plan.md  0007-nats-message-queue-integration.md  README.md
examples/nats-integration/: 01_basic_setup.sql  02_fanout_pattern.sql  03_load_balancing.sql  04_hybrid_mode.sql  README.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_builtin_functions.rs  fuzz_extreme_values.rs  fuzz_grl_parser.rs  fuzz_grl_syntax.rs  fuzz_json_input.rs  fuzz_json_standalone.rs  fuzz_rule_execution.rs
load-tests/: .index.md  00_START_HERE.md  01_simple_rule.sql  02_complex_rule.sql  03_repository_save.sql  04_repository_execute.sql  05_webhook_call.sql  06_datasource_fetch.sql  07_stress_100_rules.sql  08_extreme_500_rules.sql  BENCHMARK_RESULTS.md  QUICK_RESULTS.md  README.md  TEST_SUMMARY.txt  cleanup.sql  run_loadtest.sh  setup.sql
migrations/: 001_add_credential_encryption.sql  001_add_credential_encryption_v2.sql  001_rule_repository.sql  002_rule_triggers.sql  003_rule_sets_and_stats.sql  004_developer_experience.sql  004_fix.sql  005_webhooks.sql  006_external_datasources.sql  007_nats_integration.sql
releases/: .gitignore
sql/: debug_config_functions.sql  nats_api.sql
src/: lib.rs
src/api/: backward.rs  builtin_functions.rs  datasources.rs  debug.rs  debug_config.rs  engine.rs  health.rs  mod.rs  nats.rs  rulesets.rs  stats.rs  triggers.rs
src/core/: backward.rs  debug_executor.rs  executor.rs  facts.rs  mod.rs  rete_executor.rs  rules.rs
src/datasources/: client.rs  mod.rs  models.rs
src/debug/: config.rs  event_store.rs  events.rs  mod.rs  pg_store.rs  pg_store_simple.rs
src/error/: codes.rs  mod.rs
src/functions/: datetime.rs  json.rs  math.rs  mod.rs  preprocessing.rs  registration.rs  string.rs
src/nats/: client.rs  config.rs  error.rs  mod.rs  models.rs  pool.rs  publisher.rs
src/repository/: mod.rs  models.rs  queries.rs  test_spi.rs  validation.rs  version.rs
src/validation/: input.rs  limits.rs  mod.rs
tests/: PERFORMANCE_RESULTS.md  README.md  benchmark_analysis.md  benchmark_rete.sql  compare_engines.sql  debug_performance_test.sql  debug_test_simple.sql  integration_tests.rs  performance_comparison.sql  performance_test.sql  run_all_tests.sh  test_backward_chaining.sql  test_builtin_functions.sql  test_builtin_functions_minimal.sql  test_case_studies.sql  test_event_triggers.sql  test_external_datasources.sql  test_native_backward_chaining.sql  test_phase2_developer_experience.sql  test_rule_repository.sql  test_rule_sets_and_stats.sql  test_webhooks.sql
tests/fixtures/: billing_tiers.grl  (+13 more)
(+17 files in other folders)
