[package]
name = "rule-engine-postgres"
version = "1.8.0"
edition = "2021"
description = "Production-ready PostgreSQL extension for rule engine with 24 built-in functions, NATS JetStream integration, testing, validation, debugging, templates, webhook support, and external data sources."
license = "MIT"
repository = "https://github.com/KSD-CO/rule-engine-postgres"
keywords = ["postgresql", "postgres", "extension", "rule-engine", "business-rules"]
categories = ["database"]

[dependencies]
pgrx = "0.16.1"
rust-rule-engine = { version = "1.8", features = ["backward-chaining"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.12"
reqwest = { version = "0.11", features = ["json", "blocking"] }
lru = "0.12"
lazy_static = "1.4"

# NATS Integration (RFC-0007)
async-nats = "0.33"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
thiserror = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["pg17"]
pg16 = ["pgrx/pg16"]
pg17 = ["pgrx/pg17"]
pg_test = []

[dev-dependencies]
pgrx-tests = "0.16.1"
